objects/Policy_Certificate_Account_Role__c/fields/IsRunBatch__c.field-meta.xml
<CustomField>
    <fullName>IsRunBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To get the newly Inserted PCAR in batch class</description>
    <label>IsRunBatch</label>
    <type>Checkbox</type>
</CustomField>