objects/Policy_Certificate_Account_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate Holder</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>